<resources>
    <string name="app_name">Ada Labs</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="no_account">"Don't have an account? "</string>
    <string name="email">Email</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="reminder">Reminder</string>
    <string name="about">About</string>
    <string name="note_app">My Notes</string>
    <string name="short_about">My note app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_title">Note title</string>
    <string name="type_your_note_here">Type your note here</string>
    <string name="add_note">Add note</string>
    <string name="lorem_ipsum">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English.</string>
    <string name="date">Pick date</string>
    <string name="pick_time">Pick time</string>
</resources>